--- a/discord.css
+++ b/discord.css
@@ -1,26 +1,46 @@
 body {
-    background-color: darkorchid
-}
-.test{
-    font-size: 30px;
-    color: black;
-    border-style: inset;
-    background-color: white;
-    
-}
-.test2 {
-    font-size: 30px;
-    color: blue;
-    border-style:  inset;
-    background-color: white;
-    
-}
-.test3 {
-    font-size: 30px;
-    color: black;
-    border-style: inset;
-    background-color: white;   
-}
-span {
-    color: black;
-}
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    background: url(background.jpg) no-repeat;
+    background-size: cover;
+  }
+  
+  .loader {
+    background: #111;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .loader div {
+    background: #fff;
+    width: 16px;
+    height: 32px;
+    margin-left: 10px;
+    animation: loader 1.2s infinite;
+  }
+  
+  @keyframes loader {
+    50% {
+      height: 64px;
+    }
+  }
+  
+  .loader div:nth-child(1) {
+    background: #ff9f1a;
+    animation-delay: -0.4s;
+  }
+  
+  .loader div:nth-child(2) {
+    background: #fed330;
+    animation-delay: -0.2s;
+  }
+  
+  .loader div:nth-child(3) {
+    background: #fffa65;
+    animation-delay: 0s;
+  }
+  
